--- a/POC v2/top_customers_stream_config_v2.json
+++ b/POC v2/top_customers_stream_config_v2.json
@@ -3,7 +3,7 @@
     "CALLED_NUMBER_OCN": "{{phone()}}",
     "NUMBER_OF_ATTEMPTS": {{integer(0,20)}},		
     "CALLING_NUMBER_OVERALL_OCN": "{{alphaNumeric(4)}}",			
-    "SENT_TIME":{{timestamp()}},	
+    "SENT_TIME": {{timestamp()}},	
     "CUSTOMER_GAN":"{{lorem(1,"words")}}",	
     "DLR_REQUESTED":{{integer(1,99)}},
     "BILLING_SCOPE_ID":"{{uuid()}}",			
@@ -45,7 +45,7 @@
     "CALLING_NUMBER_COUNTRY":"{{country()}}", 		
     "RECEIVED_TIME":{{timestamp()}},			
     "CARRIER_SPID":"{{alphaNumeric(10)}}",			
-    "DESTS_SPAM_ANALYSIS_RETURN_CODE":"{{integer(0,1)}}",			
+    "DESTS_SPAM_ANALYSIS_RETURN_CODE":{{integer(0,1)}},			
     "FILENAME":"{{concat(lorem(1,"words"),".wav")}}",			
     "BILLABLE":{{integer(0,1)}},			
     "LOAD_TIME":{{timestamp()}},			
