added timestamp logic

--- a/POC v2/main_stream_config_v2.json
+++ b/POC v2/main_stream_config_v2.json
@@ -3,7 +3,7 @@
     "CALLED_NUMBER_OCN": "{{phone()}}",
     "NUMBER_OF_ATTEMPTS": {{integer(0,20)}},		
     "CALLING_NUMBER_OVERALL_OCN": "{{alphaNumeric(4)}}",			
-    "SENT_TIME": {{timestamp()}},	
+    "SENT_TIME": "{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",	
     "CUSTOMER_GAN":"{{lorem(1,"words")}}",	
     "DLR_REQUESTED":{{integer(1,99)}},
     "BILLING_SCOPE_ID":"{{uuid()}}",			
@@ -17,7 +17,7 @@
     "MESSAGE_STATUS":"{{random("good","better","best","bester")}}",			
     "CALLING_NUMBER_OCN":"{{alphaNumeric(4)}}",			
     "RESPONSE_CODE":{{integer(100,700)}},		
-    "DLR_TIME":{{timestamp()}},			
+    "DLR_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",			
     "API_USER_ID":"{{uuid()}}",	
     "MESSAGE_ID":"{{uuid()}}",		
     "CALLED_NUMBER_STATE":"{{state()}}",			
@@ -39,19 +39,19 @@
     "CALLING_NUMBER_STATE":"{{state()}}",			
     "SOURCES_SPAM_ANALYSIS_RETURN_CODE":{{integer(0,1)}},			
     "CUSTOMER_ID":"{{integer(10,100)}}",			
-    "FINAL_TIME":{{timestamp()}},			
+    "FINAL_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",			
     "CALLED_NUMBER":"{{phone()}}",			
     "MESSAGE_PART":{{integer(1,5)}},			
     "CALLING_NUMBER_COUNTRY":"{{country()}}", 		
-    "RECEIVED_TIME":{{timestamp()}},			
+    "RECEIVED_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",			
     "CARRIER_SPID":"{{alphaNumeric(10)}}",			
     "DESTS_SPAM_ANALYSIS_RETURN_CODE":{{integer(0,1)}},			
     "FILENAME":"{{concat(lorem(1,"words"),".wav")}}",			
     "BILLABLE":{{integer(0,1)}},			
-    "LOAD_TIME":{{timestamp()}},			
+    "LOAD_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",			
     "AMP_ID":"{{uuid()}}",			
     "AMP_NAME":"{{random("red","yellow","green")}}",			
     "CALLING_NUMBER_AOCN":"{{alphaNumeric(4)}}",			
     "CALLED_NUMBER_AOCN":"{{alphaNumeric(4)}}",		
-    "MESSAGE_DATE":"{{date("YYYY-MM-dd")}}" 
+    "MESSAGE_DATE":"{{date("yyyy-MM-dd")}}" 
 }
