Added real time coorelation table.

--- a/POC v2/main_stream_config_v2.json
+++ b/POC v2/main_stream_config_v2.json
@@ -6,20 +6,20 @@
     "SENT_TIME": "{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",	
     "CUSTOMER_GAN":"{{lorem(1,"words")}}",	
     "DLR_REQUESTED":{{integer(1,99)}},
-    "BILLING_SCOPE_ID":"{{uuid()}}",			
+    "BILLING_SCOPE_ID":"{{{integer(1,9999)}}",			
     "MESSAGE_LENGTH":{{integer(1,50)}},		
-    "CALLING_NUMBER":"{{phone()}}",			
+    "CALLING_NUMBER":"{{concat("99","{{integer(0,1)}","-","{{integer(100,656)}","-","{{integer(1000,9999)}")}}",		
     "PROVIDER_NAME":"{{random("verizon","google","att")}}",			
     "CARRIER_NET_NUMBER_ID":"{{alphaNumeric(4)}}",			
     "DESTINATION_COUNTRY_CODE":"{{country()}}",			
-    "MDR_ID":"{{uuid()}}",			
+    "MDR_ID":"{{{integer(1,9999)}}",			
     "CALLED_NUMBER_LATA": "{{integer(100,999)}}",			
-    "MESSAGE_STATUS":"{{random("good","better","best","bester")}}",			
+    "MESSAGE_STATUS":"{{integer(1,7)}}",			
     "CALLING_NUMBER_OCN":"{{alphaNumeric(4)}}",			
     "RESPONSE_CODE":{{integer(100,700)}},		
     "DLR_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",			
-    "API_USER_ID":"{{uuid()}}",	
-    "MESSAGE_ID":"{{uuid()}}",		
+    "API_USER_ID":"{{{integer(1,9999)}}",	
+    "MESSAGE_ID":"{{{integer(1,9999)}}",		
     "CALLED_NUMBER_STATE":"{{state()}}",			
     "PROVIDER_ID":{{integer(1,15)}},		
     "CAMPAIGN_ID":{{integer(1,100)}},		
@@ -29,18 +29,18 @@
     "CALLED_NUMBER_COUNTRY":"{{country()}}",			
     "MESSAGE_PARTS_TOTAL":{{integer(1,5)}},			
     "CALLING_NUMBER_LATA":"{{alphaNumeric(4)}}",			
-    "RECORD_TYPE":"{{random("good","better","best","bester")}}",			
+    "RECORD_TYPE":"{{integer(0,1)}}",			
     "CORRELATOR_CORRELATED_DATE":"{{date("YYYY-MM-dd")}}",			
-    "DLR_CODE":{{integer(0,9)}},			
-    "API_APP_ID":"{{uuid()}}", 		
-    "MESSAGE_DIRECTION":"{{random("in","out","up","down")}}",			
+    "DLR_CODE":{{integer(1,40)}},			
+    "API_APP_ID":"{{{integer(1,9999)}}", 		
+    "MESSAGE_DIRECTION":"{{integer(0,1)}}",			
     "CALLED_NUMBER_OVERALL_OCN":"{{alphaNumeric(4)}}",			
-    "PRODUCT":"{{random("b1","b2","b2","b4")}}",		
+    "PRODUCT":"{{integer(1,6)}}",		
     "CALLING_NUMBER_STATE":"{{state()}}",			
     "SOURCES_SPAM_ANALYSIS_RETURN_CODE":{{integer(0,1)}},			
-    "CUSTOMER_ID":"{{integer(10,100)}}",			
+    "CUSTOMER_ID":"{{integer(1,1500)}}",			
     "FINAL_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",			
-    "CALLED_NUMBER":"{{phone()}}",			
+    "CALLED_NUMBER":"{{concat("99","{{integer(0,5)}","-","{{integer(100,656)}","-","{{integer(1000,9999)}")}}",			
     "MESSAGE_PART":{{integer(1,5)}},			
     "CALLING_NUMBER_COUNTRY":"{{country()}}", 		
     "RECEIVED_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",			
@@ -49,7 +49,7 @@
     "FILENAME":"{{concat(lorem(1,"words"),".wav")}}",			
     "BILLABLE":{{integer(0,1)}},			
     "LOAD_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",			
-    "AMP_ID":"{{uuid()}}",			
+    "AMP_ID":"{{{integer(1,9999)}}",			
     "AMP_NAME":"{{random("red","yellow","green")}}",			
     "CALLING_NUMBER_AOCN":"{{alphaNumeric(4)}}",			
     "CALLED_NUMBER_AOCN":"{{alphaNumeric(4)}}",		
