--- a/POC v2/main_stream_config_v2.json
+++ b/POC v2/main_stream_config_v2.json
@@ -1,15 +1,15 @@
 {
     "MESSAGE_CLASS": "{{random("good","bad","gooder")}}",	
-    "CALLED_NUMBER_OCN": "{{phone()}}",
+    "CALLED_NUMBER_OCN": "{{alphaNumeric(4)}}",
     "NUMBER_OF_ATTEMPTS": {{integer(0,20)}},		
     "CALLING_NUMBER_OVERALL_OCN": "{{alphaNumeric(4)}}",			
     "SENT_TIME": "{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",	
     "CUSTOMER_GAN":"{{lorem(1,"words")}}",	
-    "DLR_REQUESTED":{{integer(1,99)}},
+    "DLR_REQUESTED":{{integer(1,40)}},
     "BILLING_SCOPE_ID":"{{{integer(1,9999)}}",			
     "MESSAGE_LENGTH":{{integer(1,50)}},		
     "CALLING_NUMBER":"{{concat("99","{{integer(0,1)}","-","{{integer(100,656)}","-","{{integer(1000,9999)}")}}",		
-    "PROVIDER_NAME":"{{random("verizon","google","att")}}",			
+    "PROVIDER_NAME":"{{integer(1,15)}}",			
     "CARRIER_NET_NUMBER_ID":"{{alphaNumeric(4)}}",			
     "DESTINATION_COUNTRY_CODE":"{{country()}}",			
     "MDR_ID":"{{{integer(1,9999)}}",			
@@ -20,25 +20,26 @@
     "DLR_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",			
     "API_USER_ID":"{{{integer(1,9999)}}",	
     "MESSAGE_ID":"{{{integer(1,9999)}}",		
-    "CALLED_NUMBER_STATE":"{{state()}}",			
+    "CALLED_NUMBER_STATE":"{{concat(state(),"integer(0,1)")}}",			
     "PROVIDER_ID":{{integer(1,15)}},		
     "CAMPAIGN_ID":{{integer(1,100)}},		
     "ZONE":"{{random("us","eu","sa","as")}}", 
-    "CUSTOMER_NAME":"{{firstName()}} {{lastName()}}",	
+    {{put("customer", "integer(30000,31500)")}}
+    "CUSTOMER_NAME":"{{get("customer")}} {{get("customer")}}",	
     "HTTP_STATUS_CODE":{{integer(100,600)}},		
-    "CALLED_NUMBER_COUNTRY":"{{country()}}",			
+    "CALLED_NUMBER_COUNTRY":"{{integer(200,216)}",			
     "MESSAGE_PARTS_TOTAL":{{integer(1,5)}},			
     "CALLING_NUMBER_LATA":"{{alphaNumeric(4)}}",			
     "RECORD_TYPE":"{{integer(0,1)}}",			
     "CORRELATOR_CORRELATED_DATE":"{{date("YYYY-MM-dd")}}",			
     "DLR_CODE":{{integer(1,40)}},			
-    "API_APP_ID":"{{{integer(1,9999)}}", 		
+    "API_APP_ID":"{{integer(1,9999)}}", 		
     "MESSAGE_DIRECTION":"{{integer(0,1)}}",			
     "CALLED_NUMBER_OVERALL_OCN":"{{alphaNumeric(4)}}",			
     "PRODUCT":"{{integer(1,6)}}",		
     "CALLING_NUMBER_STATE":"{{state()}}",			
     "SOURCES_SPAM_ANALYSIS_RETURN_CODE":{{integer(0,1)}},			
-    "CUSTOMER_ID":"{{integer(1,1500)}}",			
+    "CUSTOMER_ID":"{{get("customer")}}",			
     "FINAL_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",			
     "CALLED_NUMBER":"{{concat("99","{{integer(0,5)}","-","{{integer(100,656)}","-","{{integer(1000,9999)}")}}",			
     "MESSAGE_PART":{{integer(1,5)}},			
@@ -49,8 +50,8 @@
     "FILENAME":"{{concat(lorem(1,"words"),".wav")}}",			
     "BILLABLE":{{integer(0,1)}},			
     "LOAD_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",			
-    "AMP_ID":"{{{integer(1,9999)}}",			
-    "AMP_NAME":"{{random("red","yellow","green")}}",			
+    "AMP_ID":"{{integer(0,14)}}",			
+    "AMP_NAME":"{{integer(0,14)}}",			
     "CALLING_NUMBER_AOCN":"{{alphaNumeric(4)}}",			
     "CALLED_NUMBER_AOCN":"{{alphaNumeric(4)}}",		
     "MESSAGE_DATE":"{{date("yyyy-MM-dd")}}" 
