--- a/POC v2/main_stream_config_v2.json
+++ b/POC v2/main_stream_config_v2.json
@@ -6,28 +6,27 @@
     "SENT_TIME": "{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",	
     "CUSTOMER_GAN":"{{lorem(1,"words")}}",	
     "DLR_REQUESTED":{{integer(1,40)}},
-    "BILLING_SCOPE_ID":"{{{integer(1,9999)}}",			
+    "BILLING_SCOPE_ID":"{{integer(1,9999)}}",			
     "MESSAGE_LENGTH":{{integer(1,50)}},		
-    "CALLING_NUMBER":"{{concat("99","{{integer(0,1)}","-","{{integer(100,656)}","-","{{integer(1000,9999)}")}}",		
+    "CALLING_NUMBER":"{{concat("99",integer(0,1),"-",integer(100,656),"-",integer(1000,9999))}}",		
     "PROVIDER_NAME":"{{integer(1,15)}}",			
     "CARRIER_NET_NUMBER_ID":"{{alphaNumeric(4)}}",			
     "DESTINATION_COUNTRY_CODE":"{{country()}}",			
-    "MDR_ID":"{{{integer(1,9999)}}",			
+    "MDR_ID":"{{uuid()}}",			
     "CALLED_NUMBER_LATA": "{{integer(100,999)}}",			
     "MESSAGE_STATUS":"{{integer(1,7)}}",			
     "CALLING_NUMBER_OCN":"{{alphaNumeric(4)}}",			
     "RESPONSE_CODE":{{integer(100,700)}},		
     "DLR_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",			
-    "API_USER_ID":"{{{integer(1,9999)}}",	
-    "MESSAGE_ID":"{{{integer(1,9999)}}",		
-    "CALLED_NUMBER_STATE":"{{concat(state(),"integer(0,1)")}}",			
+    "API_USER_ID":"{{integer(1,9999)}}",	
+    "MESSAGE_ID":"{{uuid()}}",		
+    "CALLED_NUMBER_STATE":"{{concat(state(),integer(0,1))}}",			
     "PROVIDER_ID":{{integer(1,15)}},		
-    "CAMPAIGN_ID":{{integer(1,100)}},		
+    "CAMPAIGN_ID":"{{integer(1,100)}}",		
     "ZONE":"{{random("us","eu","sa","as")}}", 
-    {{put("customer", "integer(30000,31500)")}}
-    "CUSTOMER_NAME":"{{get("customer")}} {{get("customer")}}",	
+    "CUSTOMER_NAME":"{{{put("customer", integer(30000,31500))}} {{get("customer")}}",	
     "HTTP_STATUS_CODE":{{integer(100,600)}},		
-    "CALLED_NUMBER_COUNTRY":"{{integer(200,216)}",			
+    "CALLED_NUMBER_COUNTRY":"{{integer(200,216)}}",			
     "MESSAGE_PARTS_TOTAL":{{integer(1,5)}},			
     "CALLING_NUMBER_LATA":"{{alphaNumeric(4)}}",			
     "RECORD_TYPE":"{{integer(0,1)}}",			
@@ -41,7 +40,7 @@
     "SOURCES_SPAM_ANALYSIS_RETURN_CODE":{{integer(0,1)}},			
     "CUSTOMER_ID":"{{get("customer")}}",			
     "FINAL_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",			
-    "CALLED_NUMBER":"{{concat("99","{{integer(0,5)}","-","{{integer(100,656)}","-","{{integer(1000,9999)}")}}",			
+    "CALLED_NUMBER":"{{concat("99",integer(0,5),"-",integer(100,656),"-",integer(1000,9999))}}",			
     "MESSAGE_PART":{{integer(1,5)}},			
     "CALLING_NUMBER_COUNTRY":"{{country()}}", 		
     "RECEIVED_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",			
@@ -49,9 +48,9 @@
     "DESTS_SPAM_ANALYSIS_RETURN_CODE":{{integer(0,1)}},			
     "FILENAME":"{{concat(lorem(1,"words"),".wav")}}",			
     "BILLABLE":{{integer(0,1)}},			
-    "LOAD_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",			
-    "AMP_ID":"{{integer(0,14)}}",			
-    "AMP_NAME":"{{integer(0,14)}}",			
+    "LOAD_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",		
+    "AMP_ID":"{{put("AMP_ID", integer(0,14))}}",			
+    "AMP_NAME":"{{get("AMP_ID")}}",			
     "CALLING_NUMBER_AOCN":"{{alphaNumeric(4)}}",			
     "CALLED_NUMBER_AOCN":"{{alphaNumeric(4)}}",		
     "MESSAGE_DATE":"{{date("yyyy-MM-dd")}}" 
