--- a/POC v2/main_stream_config_v2.json
+++ b/POC v2/main_stream_config_v2.json
@@ -1,14 +1,14 @@
 {
     "MESSAGE_CLASS": "{{random("good","bad","gooder")}}",	
     "CALLED_NUMBER_OCN": "{{alphaNumeric(4)}}",
-    "NUMBER_OF_ATTEMPTS": {{integer(0,20)}},		
+    "NUMBER_OF_ATTEMPTS": {{integer(1,20)}},		
     "CALLING_NUMBER_OVERALL_OCN": "{{alphaNumeric(4)}}",			
     "SENT_TIME": "{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",	
     "CUSTOMER_GAN":"{{lorem(1,"words")}}",	
     "DLR_REQUESTED":{{integer(1,40)}},
     "BILLING_SCOPE_ID":"{{integer(1,9999)}}",			
     "MESSAGE_LENGTH":{{integer(1,50)}},		
-    "CALLING_NUMBER":"{{concat("99",integer(0,1),"-",integer(100,656),"-",integer(1000,9999))}}",		
+    "CALLING_NUMBER":"{{concat("99",random("0","1"),"-",integer(100,656),"-",integer(1000,9999))}}",		
     "PROVIDER_NAME":"{{integer(1,15)}}",			
     "CARRIER_NET_NUMBER_ID":"{{alphaNumeric(4)}}",			
     "DESTINATION_COUNTRY_CODE":"{{country()}}",			
@@ -20,7 +20,7 @@
     "DLR_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",			
     "API_USER_ID":"{{integer(1,9999)}}",	
     "MESSAGE_ID":"{{uuid()}}",		
-    "CALLED_NUMBER_STATE":"{{concat(state(),integer(0,1))}}",			
+    "CALLED_NUMBER_STATE":"{{concat(state(),random("0","1"))}}",			
     "PROVIDER_ID":{{integer(1,15)}},		
     "CAMPAIGN_ID":"{{integer(1,100)}}",		
     "ZONE":"{{random("us","eu","sa","as")}}", 
@@ -29,15 +29,15 @@
     "CALLED_NUMBER_COUNTRY":"{{integer(200,216)}}",			
     "MESSAGE_PARTS_TOTAL":{{integer(1,5)}},			
     "CALLING_NUMBER_LATA":"{{alphaNumeric(4)}}",			
-    "RECORD_TYPE":"{{integer(0,1)}}",			
+    "RECORD_TYPE":"{{random("0","1")}}",			
     "CORRELATOR_CORRELATED_DATE":"{{date("YYYY-MM-dd")}}",			
     "DLR_CODE":{{integer(1,40)}},			
     "API_APP_ID":"{{integer(1,9999)}}", 		
-    "MESSAGE_DIRECTION":"{{integer(0,1)}}",			
+    "MESSAGE_DIRECTION":"{{random("0","1")}}",			
     "CALLED_NUMBER_OVERALL_OCN":"{{alphaNumeric(4)}}",			
     "PRODUCT":"{{integer(1,6)}}",		
     "CALLING_NUMBER_STATE":"{{state()}}",			
-    "SOURCES_SPAM_ANALYSIS_RETURN_CODE":{{integer(0,1)}},			
+    "SOURCES_SPAM_ANALYSIS_RETURN_CODE":{{random("0","1")}},			
     "CUSTOMER_ID":"{{get("customer")}}",			
     "FINAL_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",			
     "CALLED_NUMBER":"{{concat("99",integer(0,5),"-",integer(100,656),"-",integer(1000,9999))}}",			
@@ -45,9 +45,9 @@
     "CALLING_NUMBER_COUNTRY":"{{country()}}", 		
     "RECEIVED_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",			
     "CARRIER_SPID":"{{alphaNumeric(10)}}",			
-    "DESTS_SPAM_ANALYSIS_RETURN_CODE":{{integer(0,1)}},			
+    "DESTS_SPAM_ANALYSIS_RETURN_CODE":{{random("0","1")}},			
     "FILENAME":"{{concat(lorem(1,"words"),".wav")}}",			
-    "BILLABLE":{{integer(0,1)}},			
+    "BILLABLE":{{random("0","1")}},			
     "LOAD_TIME":"{{date("yyyy-MM-dd HH:mm:ss.SSS")}}",		
     "AMP_ID":"{{put("AMP_ID", integer(0,14))}}",			
     "AMP_NAME":"{{get("AMP_ID")}}",			
